<package>
<name>robot_control</name>
<version>1.0.0</version>
<description> Controlling the robot using only RPi</description>
<maintainer email="akshat20172@iiitd.ac.in">akshat20172</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>cmake_modules</build_depend>
<build_depend>eigen</build_depend>
<run_depend>nav_msgs</run_depend>
</package>
